--- a/bod-corebank-microservice-group-alibaba/pom.xml
+++ b/bod-corebank-microservice-group-alibaba/pom.xml
@@ -1,12 +1,25 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>bod-corebank-microservice-group</groupId>
-    <artifactId>bod-corebank-microservice-group</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>bod-corebank-microservice-group-alibaba</groupId>
-  <artifactId>bod-corebank-microservice-group-alibaba</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>bod-corebank-microservice-group</groupId>
+		<artifactId>bod-corebank-microservice-group</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>bod-corebank-microservice-group-alibaba</groupId>
+	<artifactId>bod-corebank-microservice-group-alibaba</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.alibaba.cloud</groupId>
+				<artifactId>spring-cloud-alibaba-dependencies</artifactId>
+				<version>2.1.0.RELEASE</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
